--- a/PersonalPortfolio/pages/css/nav.css
+++ b/PersonalPortfolio/pages/css/nav.css
@@ -28,7 +28,7 @@ nav::after {
 }
 
 .nav-button-margin {
-    margin-left: 50%;
+    margin-left: 30%;
 }
 
 .navbutton {
